# rise-os

./: .env  .env.example  .gitignore  BUILD_GUIDE.md  MCP_SETUP.md  README.md  mcp-claude-config.json  mcp-research-1.json  mcp-research-2.json  mcp-research-3.json  next.config.ts  package.json  prisma.config.ts  supabase-migration-api-users.sql  supabase-migration-mcp.sql  supabase-schema.sql  tsconfig.json  worklog.md
agent-ctx/: 4-dashboard.md  5-morning-routine-daily-planner.md  6-tasks-projects.md  qa-3a-styling-expert.md  qa-3b-styling-expert.md  qa-3c-styling-expert.md  qa-4a-fullstack-dev.md  qa-4b-1-main.md  r3-features-fullstack-dev.md  r3-gamification-fullstack.md  r3-polish-fullstack-dev.md  r7-features-main.md
db/: custom.db
prisma/: schema.prisma
public/: manifest.json  sw.js
tauri/: tauri.conf.json
tauri/src/: Cargo.toml  lib.rs
tool-results/: bash_1783883579385_793ed2907581.txt  bash_1783897430924_f83b7f7b654e.txt  bash_1783901910907_11b8b429e312.txt  bash_1783903533083_4685d9d98190.txt  read_1783882902145_06e4cdccc791.txt  read_1783882908665_5565875f6abd.txt  read_1783888401559_31fb4e3101f9.txt  read_1783888402014_99edcbb5d590.txt  read_1783888402490_e2ede53a0619.txt  read_1783888402924_c3494d03786d.txt  read_1783888403362_1f3d3e32c46c.txt  read_1783888403793_9fe9cc99168b.txt  read_1783888404258_2ae68f4add7b.txt  read_1783888410830_ce928f4b79e9.txt  read_1783888411299_820a261280dd.txt  read_1783888411793_74dc6a0449b9.txt  read_1783888513063_764806cd356f.txt  read_1783888513520_9aeee94ba3df.txt  read_1783888513985_7cd7d67ca0ce.txt  (+83 more)
(+111 files in other folders)
